<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6ffca"
    tools:context=".AlergiasActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/background_fruits_top_left"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:src="@drawable/frutas_canto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/background_fruits_top_right"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:src="@drawable/frutas_canto"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/background_fruits_bottom_left"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:src="@drawable/frutas_canto"
            android:rotation="270"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/background_fruits_bottom_right"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:src="@drawable/frutas_canto"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="733dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/alergias_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/alergias_subtitle"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/et_alergias_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edittext_border_xml"
                android:autofillHints="text"
                android:gravity="top|start"
                android:hint="@string/alergias_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="4"
                android:padding="12dp" />


            <Button
                android:id="@+id/btn_concluir"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#81C784"
                android:text="@string/concluir"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/tv_sem_alergias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#81C784"
                android:text="@string/sem_alergias"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/tv_voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#81C784"
                android:text="@string/voltar"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
